--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&family=Raleway:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Lora:ital@1&display=swap');
 
 :root {
   --primary:        #1DED91;
@@ -9,8 +9,8 @@
   --dark-01:        #2C302E;
   --dark-02:        #272C2A;
   --dark-03:        #1A1F1D;
-  --typography-body: 'JetBrains Mono', monospace;
-  --typography-title: 'Raleway', sans-serif;
+  --typography-body: 'Lato', sans-serif;
+  --typography-title: 'Lora', serif;
   --module-size: 30px;
   --default-radius: 4px;
 }
@@ -46,6 +46,14 @@ h2{
   font-size: 100%;
 }
 
+article{
+  align-items: center;
+  display: flex;
+  gap: calc(var(--module-size) * 2);
+  justify-content: center;
+  padding: 90px 30px;
+}
+
 /* 
   Components
 */
@@ -54,68 +62,39 @@ h2{
   margin: 0 auto;
 }
 
-.paragraph{
-  font-family: var(--typography-body);
-  line-height: 1.5;
+.divider{
+  border: 0px solid #000;
+  width: 100%;
+  height: 1px;
+  background: linear-gradient(270deg, #424242, #00000041);
 }
 
-h2.paragraph{
-  font-size: 24px;
-  margin-top: 15px;
-}
-
-.title,
 .menu__link,
 .button,
 .button--as-link,
+.paragraph,
+.subtitle,
 .social__link{
-  font-family: var(--typography-title);
-  font-weight: 700;
+  font-family: var(--typography-body);
 }
 
 .menu__link,
 .button,
 .button--as-link,
+.button,
 .social__link{
   display: block;
   cursor: pointer;
   padding: 10px 20px;
-}
-.menu__link,
-.subtitle{
-  position: relative;
+  font-weight: 700;
 }
 
-.menu__link{
-  overflow-x: hidden;
-}
+.button,
+.button--as-link{
+  display: flex;
+  gap: calc(var(--module-size) / 2);
+  align-content: center;
 
-.title{
-  color: var(--light-01);
-  font-size: 36px;
-}
-
-.subtitle:not(p){
-  color: var(--gray-02);
-}
-
-.is-active::after{
-  background: var(--primary);
-  border-radius: var(--default-radius);
-  bottom: 0;
-  content: "";
-  display: block;
-  height: 2px;
-  left: -200px;
-  opacity: 0;
-  position: absolute;
-  width: 40px;
-  transition: all 650ms ease-out;
-
-}
-.is-active:hover::after {
-  opacity: 1;
-  left: 0;
 }
 
 .button{
@@ -131,42 +110,22 @@ h2.paragraph{
   background: var(--primary-light);
 }
 
-article{
-  align-items: center;
-  display: flex;
-  gap: calc(var(--module-size) * 2);
-  justify-content: center;
-}
 
 /* 
-  Interface
+  Typography
 */
-
-/* 
-  -- Menu
-*/
-
-.menu{
-  display: flex;
-  justify-content: space-between;
-  padding: var(--module-size);
+.title{
+  color: var(--light-01);
+  font-family: var(--typography-title);
+  font-size: 54px;
 }
 
-.menu__left,
-.menu__right{
-  display: inherit;
-  gap: var(--module-size);
+.subtitle{
+  color: var(--gray-02);
+  font-weight: 700;
 }
 
-/* 
-  Texts
-*/
-
-.headline{
-  margin-bottom: calc(var(--module-size) * 2);
-}
-
-.headline .subtitle::after{
+.headline > .subtitle::after{
   background: var(--primary);
   bottom: 0;
   content: "";
@@ -177,12 +136,49 @@ article{
   width: var(--module-size);
 }
 
+.paragraph{
+  line-height: 1.5;
+  font-weight: 400;
+}
+
+h2.paragraph{
+  font-size: 24px;
+  margin-top: 30px;
+}
+
+
+
+/* 
+  -- Menu
+*/
+.menu{
+  display: flex;
+  justify-content: space-between;
+  padding: var(--module-size);
+}
+.menu__left,
+.menu__right{
+  display: inherit;
+  gap: var(--module-size);
+}
+.menu__link{
+  position: relative;
+  overflow-x: hidden;
+}
+
+/* 
+  Interface
+*/
+
+.headline{
+  margin:  calc(var(--module-size) * 3) 0 calc(var(--module-size) * 2) 0;
+}
 
 .call-to-action{
   align-items: center;
   display: flex;
   gap: 30px;
-  padding: var(--module-size) 0 var(--module-size) 0;
+  padding: calc(var(--module-size)*2) 0 var(--module-size) 0;
 }
 
 .social{
@@ -210,11 +206,45 @@ article{
 
 */
 
+.about{
+  background: var(--dark-01);
+}
+
 .gallery {
+  padding: calc(var(--module-size)/2);
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  gap: 15px;
+  gap: calc(var(--module-size)/2);
+  position: relative;
+  z-index: 1;
+}
+
+.gallery::before{
+  border-radius: 12px;
+  content: "";
+  display: block;
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--dark-03);
+  z-index: -1;
+  transform: rotate(5deg);
+}
+
+.gallery__item{
+  border-radius: 12px;
+}
+
+/* 
+
+  Services
+
+*/
+
+.services{
+  background-color: var(--dark-02);
 }
 
 .services article{
@@ -222,67 +252,75 @@ article{
   text-align: center;
 }
 
-/* .services h2.subtitle{
-  display: block;
-  max-width: max-content;
-  margin: 0 auto;
-} */
 
 .services .subtitle::after{
-  inset: 0;
+  margin-left: auto;  
+  margin-right: auto;  
 }
 
-
-/* @media all and (min-width: 320px) {
-  .grid-gallery {
-    grid-template-columns: repeat(1, 1fr);
-  }
+.services{
+  display: flex;
+  flex-direction: column;
+  gap: var(--module-size);
 }
 
-@media all and (min-width: 768px) {
-  .grid-gallery {
-    grid-template-columns: repeat(3, 1fr);
-  }
+.service{
+  display: inherit;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  padding: var(--module-size);
 }
 
-@media all and (min-width: 1024px) {
-  .grid-gallery {
-    grid-template-columns: repeat(6, 1fr);
-  }
-}
-
-.grid-gallery__item:nth-child(11n+1) {
-  grid-column: span 1;
-}
-
-.grid-gallery__item:nth-child(11n+4) {
-  grid-column: span 2;
-  grid-row: span 1;
-}
-
-.grid-gallery__item:nth-child(11n+6) {
-  grid-column: span 3;
-  grid-row: span 1;
-}
-
-.grid-gallery__item:nth-child(11n+7) {
-  grid-column: span 1;
-  grid-row: span 2;
-}
-
-.grid-gallery__item:nth-child(11n+8) {
-  grid-column: span 2;
-  grid-row: span 2;
-}
-
-.grid-gallery__item:nth-child(11n+9) {
-  grid-row: span 3;
-}
-
-.grid-gallery__image {
+.service::before{
+  content: "";
+  height: 0.6px;
+  position: absolute;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  border-bottom: 0px solid black;
+  background: linear-gradient(270deg, #373b3a, #2b302e);
+  bottom: -10px;
 }
 
- */
+.service .icon{
+  display: inherit;
+  align-items: inherit;
+  gap: var(--module-size);
+  min-width: 25%;
+  padding-right: var(--module-size);  
+}
+
+.icon i{
+  background: var(--dark-03);
+  width: 64px;
+  height: 64px;
+  font-size: 32px;
+  padding: 16px;
+  border-radius: 12px;
+/*  vertical-align: middle;*/
+}
+
+
+/* 
+  States
+*/
+
+
+ .is-active::after{
+  background: var(--primary);
+  border-radius: var(--default-radius);
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: -200px;
+  opacity: 0;
+  position: absolute;
+  width: 40px;
+  transition: all 650ms ease-out;
+
+}
+.is-active:hover::after {
+  opacity: 1;
+  left: 0;
+}
