--- a/src/css/components/_c-social.css
+++ b/src/css/components/_c-social.css
@@ -1,10 +1,10 @@
-.c-social{
-  display: none;
-  grid-template-columns: repeat(2, 1fr);
+.c-social a.c-button{
+  color: var(--light);
+  display: block;
+  margin-bottom: 0;
+  padding: 1rem 1rem 1rem 0;
 }
 
-.c-social a{
-  padding: 12px;
-  display: block;
-  color: var(--light);
+.c-social > li:not(:last-child){
+  border-bottom: 1px solid var(--graysh);
 }
