--- a/src/css/components/index.css
+++ b/src/css/components/index.css
@@ -3,4 +3,5 @@
 @import url('./_c-wrapper.css');
 @import url('./_c-button.css');
 @import url('./_c-nav.css');
+@import url('./_sidebar.css');
 @import url('./_c-social.css');
